--- a/gb/19/11/13/n11653410.md
+++ b/gb/19/11/13/n11653410.md
@@ -1,30 +1,30 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/drjlsn3260/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/drjlsn3260/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/drjlsn3260/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>近期四川法轮功学员遭迫害概况</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/2011-3-7-sichuanfemale-prison.jpg" />
 <h6>四川女子监狱是迫害法轮功学员的黑窝。什邡市法轮功女学员潘晓萍在那里遭药物迫害致疯。（明慧网）
 </h6>
 <hr>
-	<p>【大纪元2019年11月13日讯】在2019年，四川对法轮功学员的迫害仍然严重。截至11月至少5人<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E8%A2%AB%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">被迫害致死</a>，2人遭受<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E8%8D%AF%E7%89%A9%E8%BF%AB%E5%AE%B3.md#1">药物迫害</a>，2人被迫害致精神失常，43人被<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E9%9D%9E%E6%B3%95%E5%88%A4%E5%88%91.md#1">非法判刑</a>，430人被绑架。</p>
+	<p>【大纪元2019年11月13日讯】在2019年，四川对法轮功学员的迫害仍然严重。截至11月至少5人<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%A2%AB%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">被迫害致死</a>，2人遭受<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8D%AF%E7%89%A9%E8%BF%AB%E5%AE%B3.md#1">药物迫害</a>，2人被迫害致精神失常，43人被<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9D%9E%E6%B3%95%E5%88%A4%E5%88%91.md#1">非法判刑</a>，430人被绑架。</p>
 <p>四川是迫害法轮功的恶首周永康的发迹地。周永康在任四川省委书记期间，利用各种场合部署镇压迫害法轮功，批文鼓励四川省社会科学院的文痞对法轮功进行毁谤和仇恨宣传，使四川成为全国迫害法轮功最严重的省份之一。</p>
 <h2><b>迫害致死</b></h2>
 <h3>泸州市69岁法轮功学员丁国琴狱中离世</h3>
-<p>泸州市江阳区分水镇法轮功学员丁国琴，给派出所送菜被警察绑架、构陷，<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E9%9D%9E%E6%B3%95%E5%88%A4%E5%88%91.md#1">非法判刑</a>2年半，劫持到成都龙泉女子监狱三监区，被迫害致手脚不能动弹，生命垂危，于2019年5月21日在成都双流监狱医院含冤离世，终年69岁。</p>
+<p>泸州市江阳区分水镇法轮功学员丁国琴，给派出所送菜被警察绑架、构陷，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9D%9E%E6%B3%95%E5%88%A4%E5%88%91.md#1">非法判刑</a>2年半，劫持到成都龙泉女子监狱三监区，被迫害致手脚不能动弹，生命垂危，于2019年5月21日在成都双流监狱医院含冤离世，终年69岁。</p>
 <h3>屡遭骚扰 成都法轮功学员何友华在迫害中离世</h3>
 <p>成都金堂县43岁的何友华，2006年开始修炼法轮功，曾被非法判刑，长期被中共人员骚扰、迫害。2018年6月27日下午3点多，金堂县国保出动两辆警车、十多个警察非法闯入法轮功学员袁术仙家，绑架了正在那里一起读法轮功书的何友华等八名学员。</p>
 <p>何友华被青白江派出所警察接走后，直接送到老家。长期的迫害给她造成身心的巨大伤害，何友华于2019年3月3日含冤离世。</p>
 <h3>76岁被非法判9年 遂宁胡延顺遭迫害离世</h3>
 <p>明慧网2019年4月26日报导：遂宁市大英县法轮功学员胡延顺老太太，在中共对法轮功近20年的迫害中，长期遭受中共人员的骚扰、监视、四次被绑架、两次被非法判刑。她在76岁高龄时还被非法判刑9年，出狱后被骚扰，于2018年12月30日含冤离世。</p>
 <h3>累计冤狱12载 泸州工商局干部梁文德狱中被迫害离世</h3>
-<p>泸州市工商局干部梁文德于2015年12月25日早上在家门口被绑架；2016年12月13日，被江阳区法院非法判刑5年6个月，勒索罚款1万元，这是她第二次被非法判刑。2017年端午节前，她被劫持到成都龙泉女子监狱；2019年6月24日，<ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E8%A2%AB%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">被迫害致死</a>，终年64岁。</p>
+<p>泸州市工商局干部梁文德于2015年12月25日早上在家门口被绑架；2016年12月13日，被江阳区法院非法判刑5年6个月，勒索罚款1万元，这是她第二次被非法判刑。2017年端午节前，她被劫持到成都龙泉女子监狱；2019年6月24日，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%A2%AB%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">被迫害致死</a>，终年64岁。</p>
 <p>因坚持“真、善、忍”的信仰，梁文德被非法关洗脑班五次、非法拘留三次、非法劳教两次、非法判刑两次，累计冤狱12年。</p>
 <h3>攀枝花市廖健甫被云南第一监狱虐杀</h3>
 <p>攀枝花市65岁的法轮功学员廖健甫与攀枝花市法轮功学员宋南瑜（70岁）、付文德（退休警察，70岁，2014年2月开始学炼法轮功），以及云南省华坪县法轮功学员周富明（60多岁），于2016年5月12日在华坪县境内悬挂图片和粘贴“法轮大法好”标语，被华坪县公安局国保大队绑架、抄家，关进华坪县看守所。</p>
 <p>廖健甫被非法判刑4年，勒索罚款3,000元；2018年7月，被劫持到云南省第一监狱第十一分区迫害，多次出现脑溢血症状。</p>
 <p>家属曾两次探视，得知他血压高到240，又出现了脑梗，生命垂危。家属多次申请保外就医，未收到任何反馈，监狱拒绝放人。</p>
 <p>廖健甫于2019年3月19日晚上9点在云南第一监狱第十一分区被迫害致死。</p>
-<h2><ahref="https://github.com/drjlsn3260/djy/blob/master/gb/tag/%E8%8D%AF%E7%89%A9%E8%BF%AB%E5%AE%B3.md#1">药物迫害</a></h2>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8D%AF%E7%89%A9%E8%BF%AB%E5%AE%B3.md#1">药物迫害</a></h2>
 <h3>遭药物迫害　什邡市潘晓萍精神失常</h3>
 <p>什邡市法轮功女学员潘晓萍，因坚持“真、善、忍”信仰，多次遭中共人员绑架，被非法关押、劳教、判刑。</p>
 <p>2015年9月16日下午，潘晓萍被什邡法院非法判刑3年；2015年11月11日，被劫持到四川女子监狱（龙泉驿女子监狱）。</p>
@@ -62,42 +62,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/19/3/5/n11090771.md#1">2018年 辽宁省法轮功学员遭迫害综述</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/19/3/22/n11132622.md#1">2018年 上海法轮功学员遭迫害综述</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/19/3/30/n11151453.md#1">近三年 哈尔滨双城区法轮功学员遭迫害综述</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/19/4/29/n11222275.md#1">2018年 贵州省法轮功学员遭迫害综述</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/5/n11090771.md#1">2018年 辽宁省法轮功学员遭迫害综述</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/22/n11132622.md#1">2018年 上海法轮功学员遭迫害综述</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/30/n11151453.md#1">近三年 哈尔滨双城区法轮功学员遭迫害综述</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/4/29/n11222275.md#1">2018年 贵州省法轮功学员遭迫害综述</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/29/n10438143.md#1" target="_blank">刘晓：共产党“告密者001号”的结局</a></li><li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/6/n10461502.md#1" target="_blank">四位中国军医的人生奇遇</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/17/n10645382.md#1" target="_blank">严家伟：杀人越货丧尽天良的“土改”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11489726.md#1" target="_blank">发生在两位西班牙人身上的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/9/n12605810.md#1">《诸世纪》预言抽丝剥茧 掀美大选黑幕真相</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/10/n12609444.md#1">【命理】不孝子砸老母 招来雷神诛杀</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/9/n12606110.md#1">前以色列高官：外星人与人类联系 川普知道</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/9/n12605329.md#1">《诸世纪》预言揭美国大选舞弊内幕和密谋者</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/11/28/n12581416.md#1">转世记忆58年历历在目 和尚说今生福报因果</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12619912.md#1">【微视频】美情报总监交大选报告 大事决断时？</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12620804.md#1">【横河直播】选举人团投票 密西根投票机错68%</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12620753.md#1">【远见快评】多米尼秘密泄露 北京瑞银大换血？</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616298.md#1">【十字路口】最高院为何拒绝 川普还有王牌吗</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616255.md#1">川普到西点军校看球赛 欢迎声“山呼海啸”</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616453.md#1">全球策略联盟主席：拜登不会当选 神主宰一切</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12617843.md#1">做核酸检测视频疯传 江疏影一句回应登热搜</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12617711.md#1">演员不背台词只靠提词板 章子怡直呼搭戏痛苦</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/15/n12620919.md#1">毛晓彤出生时被弃垃圾桶 成名后遭父索赡养费</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/12/n12615453.md#1">SJ于2020 TMA摘四奖唱新歌 BTS连三年获大奖</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616518.md#1">SJ作客《认识的哥哥》 自揭成员过往大吵内幕</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616588.md#1">皮夹在台弄丢很快取回 外国人：台湾万岁！</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/13/n12616814.md#1">世界上最寒冷的学校 -51°C也要上课</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12618609.md#1">真实报导美国大选 大纪元让网民刮目相看</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/14/n12618931.md#1">刻有川普大楼座标 神秘金属柱子在澳洲出现</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/9/n12606924.md#1">【直播】肺最怕的病！这样保养肺老了爬山也不喘</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/drjlsn3260/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/drjlsn3260/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/13/n11653410.htm">近期四川法轮功学员遭迫害概况</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/13/n11653410.htm">近期四川法轮功学员遭迫害概况</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/drjlsn3260/djy/blob/master/gb/19/11/13/n11653410.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/drjlsn3260/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/drjlsn3260/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/drjlsn3260/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/11/13/n11653410.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
